[package]
authors = [
  "Masatatsu Nakamura <masatatsu.nakamura@gmail.com>",
]
categories = ["rendering"]
description = "Points mesh plugin for Bevy"
edition = "2021"
homepage = "https://github.com/mattatz/bevy_points"
keywords = ["bevy", "gamedev", "graphics"]
license = "MIT"
name = "bevy_points"
readme = "README.md"
repository = "https://github.com/mattatz/bevy_points"
version = "0.8.1"

[dependencies]
bevy_app = { version = "0.16.0", default-features = false }
bevy_asset = { version = "0.16.0", default-features = false }
bevy_color = { version = "0.16.0", default-features = false }
bevy_core_pipeline = { version = "0.16.0", default-features = false, features = ["tonemapping_luts"] }
bevy_ecs = { version = "0.16.0", default-features = false }
bevy_math = { version = "0.16.0", default-features = false }
bevy_pbr = { version = "0.16.0", default-features = false }
bevy_reflect = { version = "0.16.0", default-features = false }
bevy_render = { version = "0.16.0", default-features = false }

[dev-dependencies]
bevy = { version = "0.16.0", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_winit",
    "x11",
    "bevy_window",
] }

[[example]]
name = "scene"
